# Kalo-Algebra

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
docs/: API.md  README.md
include/: kalo_algebra.hpp  matrix.hpp  utils.hpp  vector.hpp
src/: matrix.cpp  utils.cpp  vector.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
